_logs/polly/gcc-7-cxx17-pic/log-10.txt
Execute command: [
  `which`
  `cmake`
]
[/home/vagrant/Projects/lab-08-asio-client]> "which" "cmake"
/usr/local/bin/cmake
Execute command: [
  `cmake`
  `--version`
]
[/home/vagrant/Projects/lab-08-asio-client]> "cmake" "--version"
cmake version 3.13.2

CMake suite maintained and supported by Kitware (kitware.com/cmake).
Execute command: [
  `cmake`
  `-H.`
  `-B/home/vagrant/Projects/lab-08-asio-client/_builds/gcc-7-cxx17-pic-Debug`
  `-DCMAKE_BUILD_TYPE=Debug`
  `-GUnix Makefiles`
  `-DCMAKE_TOOLCHAIN_FILE=/home/vagrant/Projects/lab-08-asio-client/tools/polly/gcc-7-cxx17-pic.cmake`
  `-DCMAKE_EXE_LINKER=-fuse-ld=gold`
  `-DHUNTER_CONFIGURATION_TYPES=Debug`
]
[/home/vagrant/Projects/lab-08-asio-client]> "cmake" "-H." "-B/home/vagrant/Projects/lab-08-asio-client/_builds/gcc-7-cxx17-pic-Debug" "-DCMAKE_BUILD_TYPE=Debug" "-GUnix Makefiles" "-DCMAKE_TOOLCHAIN_FILE=/home/vagrant/Projects/lab-08-asio-client/tools/polly/gcc-7-cxx17-pic.cmake" "-DCMAKE_EXE_LINKER=-fuse-ld=gold" "-DHUNTER_CONFIGURATION_TYPES=Debug"
-- [polly] Used toolchain: gcc 7 / c++17 support / PIC
-- [hunter] Calculating Toolchain-SHA1
-- [hunter] Calculating Config-SHA1
-- [hunter] HUNTER_ROOT: /root/.hunter
-- [hunter] [ Hunter-ID: 70287b1 | Toolchain-ID: fc9dcb2 | Config-ID: dffbc08 ]
-- [hunter] GTEST_ROOT: /root/.hunter/_Base/70287b1/fc9dcb2/dffbc08/Install (ver.: 1.8.0-hunter-p11)
-- [hunter] BOOST_ROOT: /root/.hunter/_Base/70287b1/fc9dcb2/dffbc08/Install (ver.: 1.68.0-p1)
-- [hunter] BOOST_ROOT: /root/.hunter/_Base/70287b1/fc9dcb2/dffbc08/Install (ver.: 1.68.0-p1)
-- [hunter] BOOST_ROOT: /root/.hunter/_Base/70287b1/fc9dcb2/dffbc08/Install (ver.: 1.68.0-p1)
-- [hunter] BOOST_ROOT: /root/.hunter/_Base/70287b1/fc9dcb2/dffbc08/Install (ver.: 1.68.0-p1)
-- [hunter] BOOST_ROOT: /root/.hunter/_Base/70287b1/fc9dcb2/dffbc08/Install (ver.: 1.68.0-p1)
-- [hunter] BOOST_ROOT: /root/.hunter/_Base/70287b1/fc9dcb2/dffbc08/Install (ver.: 1.68.0-p1)
-- Boost version: 1.68.0
-- Found the following Boost libraries:
--   log
--   thread
--   filesystem
--   system
--   date_time
-- Configuring done
-- Generating done
-- Build files have been written to: /home/vagrant/Projects/lab-08-asio-client/_builds/gcc-7-cxx17-pic-Debug
Execute command: [
  `cmake`
  `--build`
  `/home/vagrant/Projects/lab-08-asio-client/_builds/gcc-7-cxx17-pic-Debug`
  `--config`
  `Debug`
  `--`
]
[/home/vagrant/Projects/lab-08-asio-client]> "cmake" "--build" "/home/vagrant/Projects/lab-08-asio-client/_builds/gcc-7-cxx17-pic-Debug" "--config" "Debug" "--"
Scanning dependencies of target client
[ 16%] Building CXX object CMakeFiles/client.dir/sources/source.cpp.o
/home/vagrant/Projects/lab-08-asio-client/sources/source.cpp: In member function ‘void talk_to_svr::on_ping(const string&)’:
/home/vagrant/Projects/lab-08-asio-client/sources/source.cpp:47:6: error: no match for ‘operator+=’ (operand types are ‘const string {aka const std::__cxx11::basic_string<char>}’ and ‘char’)
  msg += ' ';
  ~~~~^~~~~~
In file included from /usr/include/c++/7/string:52:0,
                 from /home/vagrant/Projects/lab-08-asio-client/include/header.hpp:6,
                 from /home/vagrant/Projects/lab-08-asio-client/sources/source.cpp:3:
/usr/include/c++/7/bits/basic_string.h:1158:7: note: candidate: std::__cxx11::basic_string<_CharT, _Traits, _Alloc>& std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::operator+=(const _CharT*) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>] <near match>
       operator+=(const _CharT* __s)
       ^~~~~~~~
/usr/include/c++/7/bits/basic_string.h:1158:7: note:   conversion of argument 1 would be ill-formed:
/home/vagrant/Projects/lab-08-asio-client/sources/source.cpp:47:9: error: invalid conversion from ‘char’ to ‘const char*’ [-fpermissive]
  msg += ' ';
         ^~~
In file included from /usr/include/c++/7/string:52:0,
                 from /home/vagrant/Projects/lab-08-asio-client/include/header.hpp:6,
                 from /home/vagrant/Projects/lab-08-asio-client/sources/source.cpp:3:
/usr/include/c++/7/bits/basic_string.h:1167:7: note: candidate: std::__cxx11::basic_string<_CharT, _Traits, _Alloc>& std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::operator+=(_CharT) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>] <near match>
       operator+=(_CharT __c)
       ^~~~~~~~
/usr/include/c++/7/bits/basic_string.h:1167:7: note:   passing ‘const string* {aka const std::__cxx11::basic_string<char>*}’ as ‘this’ argument discards qualifiers
/usr/include/c++/7/bits/basic_string.h:1149:7: note: candidate: std::__cxx11::basic_string<_CharT, _Traits, _Alloc>& std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::operator+=(const std::__cxx11::basic_string<_CharT, _Traits, _Alloc>&) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]
       operator+=(const basic_string& __str)
       ^~~~~~~~
/usr/include/c++/7/bits/basic_string.h:1149:7: note:   no known conversion for argument 1 from ‘char’ to ‘const std::__cxx11::basic_string<char>&’
/usr/include/c++/7/bits/basic_string.h:1180:7: note: candidate: std::__cxx11::basic_string<_CharT, _Traits, _Alloc>& std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::operator+=(std::initializer_list<_Tp>) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]
       operator+=(initializer_list<_CharT> __l)
       ^~~~~~~~
/usr/include/c++/7/bits/basic_string.h:1180:7: note:   no known conversion for argument 1 from ‘char’ to ‘std::initializer_list<char>’
/usr/include/c++/7/bits/basic_string.h:1192:2: note: candidate: template<class _Tp> std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::_If_sv<_Tp, std::__cxx11::basic_string<_CharT, _Traits, _Alloc>&> std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::operator+=(const _Tp&) [with _Tp = _Tp; _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]
  operator+=(const _Tp& __svt)
  ^~~~~~~~
/usr/include/c++/7/bits/basic_string.h:1192:2: note:   template argument deduction/substitution failed:
At global scope:
cc1plus: error: unrecognized command line option ‘-Wno-unused-command-line-argument’ [-Werror]
cc1plus: all warnings being treated as errors
CMakeFiles/client.dir/build.make:75: recipe for target 'CMakeFiles/client.dir/sources/source.cpp.o' failed
make[2]: *** [CMakeFiles/client.dir/sources/source.cpp.o] Error 1
make[1]: *** [CMakeFiles/client.dir/all] Error 2
CMakeFiles/Makefile2:72: recipe for target 'CMakeFiles/client.dir/all' failed
make: *** [all] Error 2
Makefile:94: recipe for target 'all' failed
